Add error when order is not provided and fixed some bugs and styling.

--- a/post.html
+++ b/post.html
@@ -1,10 +1,14 @@
+<!-- // Begin Module: Standard Content \ -->
 <table border="0" cellpadding="10" cellspacing="0" width="100%">
     <tr>
     	<%%postimg%%>    	
-        <td valign="top">
-            <%%content%%><br>
-            <a href="<%%permalink%%>" target="_blank" style="color: #142897;font-weight: normal;text-decoration: underline;">Read more</a> &raquo;
+        <td valign="top" style="width: 100%;">
+            <div style="color: #666666;font-family: 'Open Sans', Arial;font-size: 13px;line-height: 150%;text-align: left;">                
+                <span class="h2" style="color: #000000;display: block;font-family: 'Open Sans', Arial;font-size: 22px;font-weight: 600;line-height: 100%;margin-bottom: 10px;text-align: left;text-transform: uppercase;"><%%title%%></span>
+                <%%content%%><br>
+                <a href="<%%permalink%%>" target="_blank" style="color: #719430;font-weight: normal;text-decoration: underline;">Lees verder</a> &raquo;
             </div>
 		</td>
     </tr>
 </table>
+<!-- // End Module: Standard Content \ -->    
