--- a/template.html
+++ b/template.html
@@ -4,9 +4,102 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta property="og:title" content="<%%subject%%>">
         <title><%%subject%%></title>
-        <p><%%date%%></p>
-	</head>
-    <body>   
-    	<%%posts%%>     
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    </head>
+    <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="-webkit-text-size-adjust: none;margin: 0;padding: 0;background-color: #FAFAFA;width: 100%;">
+        <!--[if gte mso 9]>
+            <v:background fill="t">
+            <v:fill type="tile" src="border.png" />
+            </v:background>
+        <![endif]-->
+        <center>
+        <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="backgroundTable" background="border.png" style="margin: 0;padding: 0;height: 100%;width: 100%;">
+            <tr>
+                <td align="center" valign="top">
+                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templatePreheader" style="background-color: #FAFAFA;border-bottom: 1px solid #CCC;">
+                        <tr>
+                            <td align="left" valign="top">
+                                <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateHeader" style="background-color: #FFFFFF;border-bottom: 0;">
+                                    <tr>
+                                        <td class="headerContent" width="465" style="color: #202020;font-family: 'Open Sans', Arial;font-size: 34px;font-weight: bold;line-height: 100%;padding: 0;text-align: center;vertical-align: middle;background: #FAFAFA;">
+
+                                        	<!-- LOGO! -->
+                                            <!-- <img src="<%%site_url%%>logo-beta.png" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;"> -->
+                                            <img src="http://placehold.it/300x110" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;">
+
+                                        </td>
+                                        <td class="headerContentDate" width="135" style="text-align: center;vertical-align: bottom;background: #FAFAFA;border-bottom: 2px solid #719430;">
+                                            <span class="h3" style="color: #000000;display: block;font-family: 'Open Sans', Arial;font-size: 14px;font-weight: 600;line-height: 100%;margin-bottom: 10px;text-align: center;"><%%date%%></span>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer" style="border: none;background-color: #FDFDFD;">
+                        <tr height="20" style="background:#FAFAFA;">
+                            <td align="center" valign="top"></td>
+                        </tr>
+                        <tr>
+                            <td align="center" valign="top">
+                                <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateHeader" style="background-color: #FFFFFF;border-bottom: 20px;border-color: #FAFAFA;border-style: solid;">
+                                    <tr>
+                                        <td class="headerContent" style="color: #666666;font-family: 'Open Sans', Arial;line-height: 100%;padding: 0;background: #FAFAFA;">
+
+                                            <%%message%%>
+
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center" valign="top">
+                                <table border="0" cellpadding="10" cellspacing="0" width="600" id="templateBody" style="border: 1px solid #EBEBEB;">
+                                    <tr>
+                                        <td valign="top" class="bodyContent" style="background-color: #FDFDFD;">
+
+                                            <%%posts%%>
+
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr height="20" style="background:#FAFAFA;">
+                            <td align="center" valign="top"></td>
+                        </tr>
+                        <tr>
+                            <td align="center" valign="top">
+                                <table border="0" cellpadding="10" cellspacing="0" width="600" id="templateFooter" style="background-color: #222222;border-top: 0;">
+                                    <tr>
+                                        <td valign="top" class="footerContent">
+                                            <table border="0" cellpadding="10" cellspacing="0" width="100%">
+                                                <tr>
+                                                    <td valign="top" width="290">
+                                                        <div style="color: #919191;font-family: 'Open Sans', Arial;font-size: 12px;line-height: 125%;text-align: left;text-transform:uppercase;">
+                                                            <strong><%%sitename%%></strong>
+                                                        </div>
+                                                    </td>
+                                                    <td valign="top" width="290">
+                                                        <div style="color: #ffffff;font-family: 'Open Sans', Arial;font-size: 12px;line-height: 125%;text-align: left;">
+
+                                                        	<!-- LOGO -->
+                                                            <!-- <img src="<%%site_url%%>logo-footer.png" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;display: inline;"> -->
+                                                            <img src="http://placehold.it/155x50" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: right;display: inline;">
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        </center>
     </body>
 </html>
