--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
             </v:background>
         <![endif]-->
         <center>
-        <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="backgroundTable" background="border.png" style="margin: 0;padding: 0;height: 100%;width: 100%;">
+        <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="backgroundTable" style="margin: 0;padding: 0;height: 100%;width: 100%;">
             <tr>
                 <td align="center" valign="top">
                     <table border="0" cellpadding="0" cellspacing="0" width="600" id="templatePreheader" style="background-color: #FAFAFA;border-bottom: 1px solid #CCC;">
@@ -23,8 +23,6 @@
                                     <tr>
                                         <td class="headerContent" width="465" style="color: #202020;font-family: 'Open Sans', Arial;font-size: 34px;font-weight: bold;line-height: 100%;padding: 0;text-align: center;vertical-align: middle;background: #FAFAFA;">
 
-                                        	<!-- LOGO! -->
-                                            <!-- <img src="<%%site_url%%>logo-beta.png" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;"> -->
                                             <img src="http://placehold.it/300x110" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;">
 
                                         </td>
@@ -83,9 +81,6 @@
                                                     </td>
                                                     <td valign="top" width="290">
                                                         <div style="color: #ffffff;font-family: 'Open Sans', Arial;font-size: 12px;line-height: 125%;text-align: left;">
-
-                                                        	<!-- LOGO -->
-                                                            <!-- <img src="<%%site_url%%>logo-footer.png" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: left;display: inline;"> -->
                                                             <img src="http://placehold.it/155x50" style="border: none;font-size: 14px;font-weight: bold;height: auto;line-height: 100%;outline: none;text-decoration: none;text-transform: capitalize;float: right;display: inline;">
                                                         </div>
                                                     </td>
